--- a/my-app/src/components/transactionhistory/TransactionHistory.css
+++ b/my-app/src/components/transactionhistory/TransactionHistory.css
@@ -1,21 +1,23 @@
 .transaction-history {
-        background-color: rgba(217, 229, 241, 0.678);
-    width: 500px;
+    background-color: rgba(217, 229, 241, 0.678);
+    width: 100%;
     text-align: center;
-    margin: auto;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    padding-top: 35px;
+    padding-bottom: 55px;
+
 
 }
 
 .titleRow {
     background-color: rgb(0, 162, 255);
-        text-transform: uppercase;
-color: white;
-height: 50px;
+    text-transform: uppercase;
+    color: white;
+    height: 50px;
 }
 
 .tableRow {
     height: 50px;
-color: grey;
-background-color: honeydew;
+    color: grey;
+    background-color: honeydew;
 }
